2007-10-05  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: fixed Bug 330793 - Delegate
	  autocommenting crashes.

2007-10-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/CSharpVisitor.cs, Parser/Resolver.cs: Properly resolve aliases
	  bound to instantiated generic types. Fixes bug #324844.
	* Parser/TypeNameResolver.cs: Resolve aliased class names.

2007-10-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpParameterDataProvider.cs, Gui/CSharpTextEditorExtension.cs:
	  Implemented support for the Show Parameter List command. Also, show the
	  parameter list when typing a comma. Fixes bug #324876.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Bump MD version.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Don't set the Editor.CursorPosition
	  property if position hasn't really changed, since it will raise the
	  completion context change event, which closes the completion window.

2007-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/CodeGenerator.cs: Fix regex in RenameClass. Class name may end with
	  ":".

2007-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/CodeGenerator.cs: Fix renaming of partial classes. It was using the
	  wrong IClass to get the line and column.

2007-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: When completing 'override', show
	  overridables for System.Object.

2007-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OverrideCompletionData.cs: Generate call to base class when overriding
	  method. Fixes bug #325524.

2007-09-18  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed Bug 325438 - New doc completion
	  slowing me down.

2007-09-15  Jérémie Laval <jeremie.laval@gmail.com>

	* Parser/Parser.cs: Added support for parsing error retrieval from NRefactory.

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 
